--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
       name="description"
       content="Web site created using create-react-app"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/favicon.ico" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -27,26 +27,8 @@
     -->
     <title>AFMS</title>
 
-    <meta name="description" content="Blog app is learning project by Mehul Kothari using Node js,React Js and Medium.It a great place to read and learn from a wide range of Blogs. You can write your own thoughts,ideas and share your knowledge and blogs. So why not Start writing today">
 
-    <!-- Google / Search Engine Tags -->
-    <meta itemprop="name" content="AFMS using MERN Stack Technologies">
-    <meta itemprop="description" content="Blog app is learning project by Mehul Kothari using Node js,React Js and Medium.It a great place to read and learn from a wide range of Blogs. You can write your own thoughts,ideas and share your knowledge and blogs. So why not Start writing today">
-    <meta itemprop="image" content="https://github.com/mehulk05/Blog-Book/blob/master/src/assets/blog.jpg">
-
-    <!-- Facebook Meta Tags -->
-    <meta property="og:url" content="https://github.com/mehulk05/Blog-Book">
-    <meta property="og:type" content="website">
-    <meta property="og:title" content="AFMS using MERN Stack Technologies">
-    <meta property="og:description"  content="Blog app is learning project by Mehul Kothari using Node js,React Js and Medium.It a great place to read and learn from a wide range of Blogs. You can write your own thoughts,ideas and share your knowledge and blogs. So why not Start writing today">
-    <meta property="og:image" content="https://github.com/mehulk05/Blog-Book/blob/master/src/assets/blog.jpg">
-
-    <!-- Twitter Meta Tags -->
-    <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="AFMS using MERN Stack Technologies">
-    <meta name="twitter:description"  content="Blog app is learning project by Mehul Kothari using Node js,React Js and Medium.It a great place to read and learn from a wide range of Blogs. You can write your own thoughts,ideas and share your knowledge and blogs. So why not Start writing today">
-    <meta name="twitter:image" content="https://github.com/mehulk05/Blog-Book/blob/master/src/assets/blog.jpg">
-
+    
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
